--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for James Mitchell at 2014-09-18 12:02:20 +0100 
+%% Created for Julius at 2014-09-29 13:35:30 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
