--- a/README
+++ b/README
@@ -1,25 +1,25 @@
      ================================================================
-      README file for the `Digraphs' GAP4 package by
+      README file for the `Graphs' GAP4 package by
       Julius Jonusas, James Mitchell, Michael Torpey, Wilfred Wilson
      ================================================================
 
-Getting Digraphs                                
+Getting Graphs                                
 ----------------
 
 To get the latest version of the package, download the archive file 
 
-    digraphs-x.x.tar.gz
+    graphs-x.x.tar.gz
 
 from 
 
-    http://www-groups.mcs.st-and.ac.uk/~jamesm/digraphs.php
+    http://www-groups.mcs.st-and.ac.uk/~jamesm/graphs.php
 
 and inside the 'pkg' subdirectory of your GAP installation unpack
-digraphs-x.x.tar.gz using:
+graphs-x.x.tar.gz using:
 
-    gunzip digraphs-x.x.tar.gz; tar xvf digraphs-x.x.tar
+    gunzip graphs-x.x.tar.gz; tar xvf graphs-x.x.tar
 
-This will create a subdirectory 'digraphs-x.x'.
+This will create a subdirectory 'graphs-x.x'.
 
 Installation
 ------------
@@ -31,34 +31,34 @@ install it can be obtained from the main GAP webpage
   http://www.gap-system.org
   
 The  following  is  a  summary of the steps that should lead to a successful
-installation of Digraphs:
+installation of Graphs:
 
- 1.  download the package archive 'digraphs-x.x.tar.gz' from
+ 1.  download the package archive 'graphs-x.x.tar.gz' from
 
-       http://www-groups.mcs.st-and.ac.uk/~jamesm/digraphs.php
+       http://www-groups.mcs.st-and.ac.uk/~jamesm/graphs.php
 
- 2.  unzip and untar the file 'digraphs-x.x.tar.gz' using
+ 2.  unzip and untar the file 'graphs-x.x.tar.gz' using
  
-        gunzip digraphs-x.x.tar.gz; tar xvf digraphs-x.x.tar
+        gunzip graphs-x.x.tar.gz; tar xvf graphs-x.x.tar
     
-     this should create a directory called 'digraphs-x.x'.
+     this should create a directory called 'graphs-x.x'.
 
  3.  locate  the  'pkg'  directory  of your GAP directory, which contains the
-     directories 'lib', 'doc' and so on. Move the directory 'digraphs-x.x'
+     directories 'lib', 'doc' and so on. Move the directory 'graphs-x.x'
      into the 'pkg' directory (if it is not there already).
 
  4.  start GAP in the usual way.
 
- 5.  type LoadPackage("digraphs");
+ 5.  type LoadPackage("graphs");
 
- 6.  compile the documentation by typing DigraphsMakeDoc();
+ 6.  compile the documentation by typing GraphsMakeDoc();
 
 Further Information
 -------------------
 
 For questions, remarks, suggestions, and issues please use the issue tracker at:
 
-http://bitbucket.org/james-d-mitchell/digraphs/issues
+http://bitbucket.org/james-d-mitchell/graphs/issues
 
- Julius Jonusas, James Mitchell, Michael Torpey, Wilfred Wilson
- 18th of December 2014
+Julius Jonusas, James Mitchell, Michael Torpey, Wilfred Wilson
+18th of December 2014
