added references in bib file, added one more example in digraph.xml, repaired output for an example in bliss.xml

--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -44,3 +44,41 @@
   publisher =  {SIAM},
   OPTpublisher = {Society for Industrial and Applied Mathematics},
 }
+
+@article {CalderbankKantor1986,
+    AUTHOR = {Calderbank, R. and Kantor, W. M.},
+     TITLE = {The geometry of two-weight codes},
+   JOURNAL = {Bull. London Math. Soc.},
+  FJOURNAL = {The Bulletin of the London Mathematical Society},
+    VOLUME = {18},
+      YEAR = {1986},
+    NUMBER = {2},
+     PAGES = {97--122},
+      ISSN = {0024-6093},
+     CODEN = {LMSBBT},
+   MRCLASS = {51E20 (05B25 05C25 94B60)},
+  MRNUMBER = {818812 (87h:51022)},
+MRREVIEWER = {J. W. P. Hirschfeld},
+       DOI = {10.1112/blms/18.2.97},
+       URL = {http://dx.doi.org/10.1112/blms/18.2.97},
+}
+
+@article {vanLintSchrijver1981,
+    AUTHOR = {van Lint, J. H. and Schrijver, A.},
+     TITLE = {Construction of strongly regular graphs, two-weight codes and
+              partial geometries by finite fields},
+   JOURNAL = {Combinatorica},
+  FJOURNAL = {Combinatorica. An International Journal of the J\'anos Bolyai
+              Mathematical Society},
+    VOLUME = {1},
+      YEAR = {1981},
+    NUMBER = {1},
+     PAGES = {63--73},
+      ISSN = {0209-9683},
+     CODEN = {COMBDI},
+   MRCLASS = {05B25 (05C25 94B25)},
+  MRNUMBER = {602417 (82d:05041)},
+MRREVIEWER = {Joseph A. Thas},
+       DOI = {10.1007/BF02579178},
+       URL = {http://dx.doi.org/10.1007/BF02579178},
+}
