bliss: use NautyTracesInterface if available

--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -6,7 +6,19 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-
+@article{McKay201494,
+title = "Practical graph isomorphism, \{II\} ",
+journal = "Journal of Symbolic Computation ",
+volume = "60",
+number = "0",
+pages = "94 - 112",
+year = "2014",
+note = "",
+issn = "0747-7171",
+doi = "http://dx.doi.org/10.1016/j.jsc.2013.09.003",
+url = "http://www.sciencedirect.com/science/article/pii/S0747717113001193",
+author = "Brendan D. McKay and Adolfo Piperno"
+}
 
 
 @article{Gabow2000aa,
