--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -94,3 +94,17 @@ MRREVIEWER = {Joseph A. Thas},
        DOI = {10.1007/BF02579178},
        URL = {http://dx.doi.org/10.1007/BF02579178},
 }
+
+@article{Welsh1967aa,
+author = {Welsh, D. J. A. and Powell, M. B.},
+title = {An upper bound for the chromatic number of a graph and its application to timetabling problems},
+journal = {The Computer Journal},
+volume = {10},
+number = {1},
+pages = {85-86},
+year = {1967},
+doi = {10.1093/comjnl/10.1.85},
+URL = {http://dx.doi.org/10.1093/comjnl/10.1.85},
+eprint = {/oup/backfile/content_public/journal/comjnl/10/1/10.1093/comjnl/10.1.85/2/100085.pdf}
+}
+
