oper: add dominators algorithm
Co-authored-by: Marina Anagnostopoulou-Merkouri <mam49@st-andrews.ac.uk>
Co-authored-by: Samantha Harper <seh25@st-andrews.ac.uk>

--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -66,6 +66,19 @@
   Year = {2007},
 }
 
+@article{LT79,
+  Author = {Thomas Lengauer and Robert E. Tarjan},
+  Doi = {https://doi.org/10.1145/357062.357071},
+  Journal = {ACM Transactions on Programming Languages and Systems},
+  Number = {1},
+  Pages = {121--141},
+  Title = {A Fast Algorithm for Finding Dominators in a Flowgraph},
+  Url = {https://doi.org/10.1145/357062.357071},
+  Volume = {1},
+  Year = {1979},
+  Bdsk-Url-1 = {https://www.cs.princeton.edu/courses/archive/spr03/cs423/download/dominators.pdf}
+}
+
 @article{MP14,
   Author = {Brendan D. McKay and Adolfo Piperno},
   Doi = {https://dx.doi.org/10.1016/j.jsc.2013.09.003},
