Change http→https where possible

--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -26,15 +26,15 @@
   Number = {2},
   Pages = {97--122},
   Title = {The geometry of two-weight codes},
-  Url = {http://dx.doi.org/10.1112/blms/18.2.97},
+  Url = {https://dx.doi.org/10.1112/blms/18.2.97},
   Volume = {18},
   Year = {1986},
-  Bdsk-Url-1 = {http://dx.doi.org/10.1112/blms/18.2.97},
+  Bdsk-Url-1 = {https://dx.doi.org/10.1112/blms/18.2.97},
 }
 
 @article{Gab00,
   Author = {Harold N. Gabow},
-  Doi = {http://dx.doi.org/10.1016/S0020-0190(00)00051-X},
+  Doi = {https://dx.doi.org/10.1016/S0020-0190(00)00051-X},
   Issn = {0020-0190},
   Journal = {Information Processing Letters},
   Keywords = {Algorithms},
@@ -42,11 +42,11 @@
   Pages = {107 - 114},
   Title = {Path-based depth-first search for strong and biconnected
            components},
-  Url = {http://www.sciencedirect.com/science/article/pii/S002001900000051X},
+  Url = {https://www.sciencedirect.com/science/article/pii/S002001900000051X},
   Volume = {74},
   Year = {2000},
-  Bdsk-Url-2 = {http://dx.doi.org/10.1016/S0020-0190(00)00051-X},
-  Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S002001900000051X},
+  Bdsk-Url-2 = {https://dx.doi.org/10.1016/S0020-0190(00)00051-X},
+  Bdsk-Url-1 = {https://www.sciencedirect.com/science/article/pii/S002001900000051X},
 }
 
 @inproceedings{JK07,
@@ -68,17 +68,17 @@
 
 @article{MP14,
   Author = {Brendan D. McKay and Adolfo Piperno},
-  Doi = {http://dx.doi.org/10.1016/j.jsc.2013.09.003},
+  Doi = {https://dx.doi.org/10.1016/j.jsc.2013.09.003},
   Issn = {0747-7171},
   Journal = {Journal of Symbolic Computation},
   Number = {0},
   Pages = {94 - 112},
   Title = {Practical graph isomorphism, {II}},
-  Url = {http://www.sciencedirect.com/science/article/pii/S0747717113001193},
+  Url = {https://www.sciencedirect.com/science/article/pii/S0747717113001193},
   Volume = {60},
   Year = {2014},
-  Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.jsc.2013.09.003},
-  Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0747717113001193},
+  Bdsk-Url-2 = {https://dx.doi.org/10.1016/j.jsc.2013.09.003},
+  Bdsk-Url-1 = {https://www.sciencedirect.com/science/article/pii/S0747717113001193},
 }
 
 @article{vLS81,
@@ -96,10 +96,10 @@
   Pages = {63--73},
   Title = {Construction of strongly regular graphs, two-weight codes and
            partial geometries by finite fields},
-  Url = {http://dx.doi.org/10.1007/BF02579178},
+  Url = {https://dx.doi.org/10.1007/BF02579178},
   Volume = {1},
   Year = {1981},
-  Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF02579178},
+  Bdsk-Url-1 = {https://dx.doi.org/10.1007/BF02579178},
 }
 
 % FIXME The Welsh paper is not cited in the manual!
@@ -112,8 +112,8 @@
   Pages = {85-86},
   Title = {An upper bound for the chromatic number of a graph and its
            application to timetabling problems},
-  Url = {http://dx.doi.org/10.1093/comjnl/10.1.85},
+  Url = {https://dx.doi.org/10.1093/comjnl/10.1.85},
   Volume = {10},
   Year = {1967},
-  Bdsk-Url-1 = {http://dx.doi.org/10.1093/comjnl/10.1.85}
+  Bdsk-Url-1 = {https://dx.doi.org/10.1093/comjnl/10.1.85}
 }
