Resolve Issue #368 (edge-planarity... in doc)

--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -1,7 +1,40 @@
 % Cite keys match the cite keys that are used in the compiled GAPDoc manual
 
+@article{B12,
+   author = {John M. Boyer},
+   title = {Subgraph Homeomorphism via the Edge Addition Planarity Algorithm},
+   journal = {Journal of Graph Algorithms and Applications},
+   year = {2012},
+   volume = {16},
+   number = {2},
+   pages = {381--410},
+   doi = {10.7155/jgaa.00268}
+}
+
+@article{BM04,
+   author = {John M. Boyer and Wendy J. Myrvold},
+   title = {On the Cutting Edge: Simplified O(n) Planarity by Edge Addition},
+   journal = {Journal of Graph Algorithms and Applications},
+   year = {2004},
+   volume = {8},
+   number = {3},
+   pages = {241--273},
+   doi = {10.7155/jgaa.00091}
+}
+
+@inproceedings{B06,
+  address = {Berlin, Heidelberg},
+  author = {John M. Boyer},
+  booktitle = {Graph Drawing},
+  editor = {Healy, Patrick and Nikolov, Nikola S.},
+  isbn = {978-3-540-31667-1},
+  pages = {508--511},
+  publisher = {Springer Berlin Heidelberg},
+  title = {A New Method for Efficiently Generating Planar Graph Visibility Representations},
+  year = {2006}}
+
 @incollection{BM06,
-  Author = {John M. Boyer and Wendy J. Myrvold},
+  author = {John M. Boyer and Wendy J. Myrvold},
   Booktitle = {Graph Algorithms and Applications 5},
   Doi = {10.1142/9789812773289_0014},
   Month = {Jun},
