--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -193,3 +193,35 @@
     pages="313--324",
     isbn="978-3-319-11812-3"
 }
+
+@article{Corneil1973,
+    author = {Corneil, D. G. and Graham, B.},
+    title = {An Algorithm for Determining the Chromatic Number of a Graph},
+    journal = {SIAM Journal on Computing},
+    volume = {2},
+    number = {4},
+    pages = {311-318},
+    year = {1973},
+    doi = {10.1137/0202026},
+    URL = {https://doi.org/10.1137/0202026},
+    eprint = {https://doi.org/10.1137/0202026}
+}
+
+@article{Wang1974,
+    author= {Wang, Chung C.},
+    title = {An Algorithm for the Chromatic Number of a Graph},
+    year = {1974},
+    issue_date = {July 1974},
+    publisher = {Association for Computing Machinery},
+    address = {New York, NY, USA},
+    volume = {21},
+    number = {3},
+    issn = {0004-5411},
+    url = {https://doi.org/10.1145/321832.321837},
+    doi = {10.1145/321832.321837},
+    abstract = {Christofides' algorithm for finding the chromatic number of a graph is improved both in speed and memory space by using a depth-first search rule to search for a shortest path in a reduced subgraph tree.},
+    journal = {J. ACM},
+    month = jul,
+    pages = {385–391},
+    numpages = {7}
+}
