add DigraphAllChordlessCycles including documentation and tests

--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -183,3 +183,13 @@
     Journal = {BRICS Report Series},
     Doi = {10.7146/brics.v9i45.21760}
 }
+
+@InProceedings{US14,
+    author="Uno, Takeaki and Satoh, Hiroko",
+    title="An Efficient Algorithm for Enumerating Chordless Cycles and Chordless Paths",
+    booktitle="Discovery Science",
+    year="2014",
+    publisher="Springer International Publishing",
+    pages="313--324",
+    isbn="978-3-319-11812-3"
+}
