Made requested changes

--- a/doc/digraphs.bib
+++ b/doc/digraphs.bib
@@ -72,7 +72,7 @@
   Journal = {Information Processing Letters},
   Keywords = {Algorithms},
   Number = {34},
-  Pages = {107 - 114},:
+  Pages = {107 - 114},
   Title = {Path-based depth-first search for strong and biconnected
            components},
   Url = {https://www.sciencedirect.com/science/article/pii/S002001900000051X},
